...
              leading: const Icon(Icons.edit),
              title: Text(t.chat.chatListItem.renameAction),
            ),
          ),
          const PopupMenuDivider(),
          PopupMenuItem(
            key: const Key('chat-history-delete'),
            value: _ChatListItemActionEnum.delete,
            child: ListTile(
              leading: Icon(
                Icons.delete,
                color: Theme.of(context).colorScheme.error,
              ),
...
